--- a/CertiAssets/styles.css
+++ b/CertiAssets/styles.css
@@ -455,8 +455,15 @@ to {transform:rotate(360deg);}
 }
 
 
-
-
+@media only screen and (max-width: 480px) {
+  .overlay-container {
+    display: none;
+  }
+  .form-container{
+    width: 100%;
+    padding: 20px;
+  }
+}
 
 
 /* //////////////////////////////////////////              TRAININGS ///////////////////////////////////////////////// */
