--- a/css/teamold.css
+++ b/css/teamold.css
@@ -4,7 +4,7 @@
 }
 body
 {
-  background-image: url('../img/team_black.png');
+  background-image: url('../img/team_2024.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
