--- a/css/team_style.css
+++ b/css/team_style.css
@@ -4,7 +4,7 @@
   }
 body
 {
-  background-image: url('../img/team_2024.jpeg');
+  background-image: url('../img/team_lucent.jpeg');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
